# Kosmos

./: .dockerignore  .dockerignore.prod  .env.example  .env.mobile  .gitignore  .npmrc  Dockerfile  Dockerfile.prod  README.md  SECURITY.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.server.json  vite.config.ts
.claude/: launch.json
apps/tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/tauri/src-tauri/capabilities/: default.json
apps/tauri/src-tauri/src/: main.rs
docs/: agent-cursor.md  agent-extensibility-plan.md  agent-registry-bindings-plan.md  app-platform-plan.md  app-publishing-plan.md  channels-plan.md  drive-sharing-plan.md  i18n.md  keyboard-roadmap.md  memory-plan.md  mobile-chromebook-local-backend.md  mobile-local-android.md  mobile-sideload.md  model-agent-profiles-plan.md  model-hub-plan.md  multi-platform-prototype.md  office-format-interop.md  office-suite-plan.md  open-standards-map.md  openclaw-port-plan.md  orca-studio-port.md  references.md  rich-content-widgets-plan.md  roadmap.md  security-plan.md  transcription-plan.md  world-model-plan.md
model-manager/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
model-manager/src-tauri/: Cargo.toml  tauri.conf.json
model-manager/src-tauri/src/: main.rs
public/: mobile-install.html
reference/: README.md
scripts/: acp-test-agent.mts  backfill-tenant-billing.ts  check-desktop-version.mjs  check-translation-completeness.cjs  deploy-coolify.sh  docker-entrypoint.sh  files-smoke.mts  generate-mobile-android-icons.mjs  setup.mts  (+29 more)
(+1926 files in other folders)
