[package]
name = "arco-models"
version = "0.1.0"
description = "Arco Models — local AI model manager for Arco OS"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "io-util"] }
futures-util = "0.3"
dirs = "6"

[profile.dev]
# Keep incremental dev builds fast; the heavy deps only compile once.
opt-level = 0
