[package]
name = "arco-tauri"
version = "0.1.2"
description = "Arco OS — Tauri cross-platform shell prototype"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.dev]
opt-level = 0
